# cppmodules

./: .build-config  .clang_complete  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Darwin.cmake  Linux.cmake  Makefile  README.md  TODO.md  build.sh  compile_commands.json  flags_and_functions.cmake  functions.cmake  linux_darwin.cmake  linux_darwin_modules.cmake  modules.cmake  windows.cmake
make-win/: make-win.sln
make-win/make-win/: make-win.vcxproj  make-win.vcxproj.filters
src/example/: example.cpp
src/lib/: catch  cpp-json
src/main/: chain.hpp  chainfactory.hpp  context.hpp  global.hpp  ilogger.hpp  imodule.hpp  logger.cpp  logger.hpp  main.cpp  message.hpp  message.json  module.cpp  module.hpp  modulecom.hpp  segvhandler.hpp  spine.cpp  spine.hpp  spine.hpp.in  wiremessage.hpp
src/main/exceptions/: exceptions.hpp  general.hpp  socketer.hpp  spine.hpp  uri.hpp
src/main/interfaces/: logger.hpp
src/main/messages/: channels.hpp  command.hpp  context.hpp  factory.hpp  input.hpp  message.hpp  messages.hpp  muri.hpp  output.hpp  socketer.cpp  socketer.hpp  uri.cpp  uri.hpp
src/main/spine/: spine.cpp  spine.hpp  spine_commands.cpp
src/main/uri/: muri.hpp  uri.cpp  uri.hpp  urirouter.cpp  urirouter.hpp  uriroutes.hpp
src/mainfile/: mainfile.cpp
src/modules/: base_module.cpp  base_module.hpp  core.cpp  core.hpp  mainline_config.CMakeLists.txt  mainline_config.cmake  mainline_core.cmake  mainline_output.CMakeLists.txt  settings.cpp  settings.hpp
src/modules/mainline/: config.cpp  config.hpp  core.cpp  core.hpp  events.cpp  events.hpp  index.html  input.cpp  input.hpp  main.cfg  output.cpp  output.hpp  starter.cpp  starter.hpp  webui.cpp  webui.hpp
src/patches/: value.tcc-inline.patch
src/tests/: CommandMessage.cpp  CreateSpineLogger.cpp  Logger.cpp  MUri.cpp  ModuleChain.cpp  ModuleInterface.cpp  ModuleInterfaceFixture.cpp  ModuleInterfaceFixture.hpp  ModuleTests.cpp  SpineAPI.cpp  tests.cmake
src/tests/support/: testmodule.hpp  testmodule_headeronly.hpp
